# simple-venn

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py  venn.py
.github/workflows/: publish.yml  python_package.yml
demo/: generate_demo.py  simple-venn-demo.ipynb
simple_venn/: __init__.py  venn.py
